fix z-index bug

--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -6,10 +6,6 @@ $break-small: 767px;
   padding: 1rem 0;
 }
 
-.album-art-container {
-  z-index: 300;
-}
-
 .sign-up {
   height: 12px;
 }
